<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/calc_background"
    android:padding="8dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonExit"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btn_exit"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDisplay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="end|bottom"
        android:maxLines="1"
        android:paddingHorizontal="16dp"
        android:text="@string/display_initial_value"
        android:textColor="@color/calc_display_text"
        android:textSize="80sp"
        app:autoSizeMaxTextSize="80sp"
        app:autoSizeMinTextSize="30sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/buttons_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonExit" />

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonAllClear"
                style="@style/UtilityButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:text="@string/btn_all_clear"
                app:layout_constraintDimensionRatio="1:1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPlusMinus"
                style="@style/UtilityButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_plus_minus"
                app:layout_constraintDimensionRatio="1:1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPercent"
                style="@style/UtilityButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_percent"
                app:layout_constraintDimensionRatio="1:1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDivide"
                style="@style/OperatorButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_divide"
                app:layout_constraintDimensionRatio="1:1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSeven"
                style="@style/NumberButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_seven"
                app:layout_constraintDimensionRatio="1:1" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEight"
                style="@style/NumberButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_eight"
                app:layout_constraintDimensionRatio="1:1" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNine"
                style="@style/NumberButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_nine"
                app:layout_constraintDimensionRatio="1:1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonMultiply"
                style="@style/OperatorButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_multiply"
                app:layout_constraintDimensionRatio="1:1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonFour"
                style="@style/NumberButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_four"
                app:layout_constraintDimensionRatio="1:1" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonFive"
                style="@style/NumberButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_five"
                app:layout_constraintDimensionRatio="1:1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSix"
                style="@style/NumberButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_six"
                app:layout_constraintDimensionRatio="1:1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSubtract"
                style="@style/OperatorButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_subtract"
                app:layout_constraintDimensionRatio="1:1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonOne"
                style="@style/NumberButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_one"
                app:layout_constraintDimensionRatio="1:1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonTwo"
                style="@style/NumberButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_two"
                app:layout_constraintDimensionRatio="1:1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonThree"
                style="@style/NumberButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_three"
                app:layout_constraintDimensionRatio="1:1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonAdd"
                style="@style/OperatorButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_add"
                app:layout_constraintDimensionRatio="1:1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonZero"
                style="@style/NumberButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical|start"
                android:paddingStart="34dp"
                android:text="@string/btn_zero"
                app:layout_constraintDimensionRatio="2:1"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDecimal"
                style="@style/NumberButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_decimal"
                app:layout_constraintDimensionRatio="1:1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEquals"
                style="@style/OperatorButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_equals"
                app:layout_constraintDimensionRatio="1:1" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>